[project]
name = "qubes-doc"
version = "4.2"
description = "Qubes OS documentation"
authors = [{ name = "Qubes OS" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # sphinx 9.1 requires python > 3.11, and R4.2 requires 3.11 support
    "sphinx (>=9,<9.1)",
    "sphinxnotes-any>=2.5",
    "sphinxnotes-strike>=1.2.1",
    "sphinx-rtd-theme>=3.0.2",

    # For web builds
    # TODO make a separate optional-dependencies
    #  https://github.com/QubesOS/qubes-issues/issues/10737
    "sphinx-reredirects>=1.0.0",
    "sphinxext-opengraph>=0.12.0",
]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2024.10.3",
    "sphinx-lint>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poetry]
package-mode = false

[tool.uv]
package = false

[tool.esbonio.sphinx]
pythonCommand = ["${venv:.venv}"]