[project]
name = "qubes-doc"
version = "4.2"
description = "Qubes OS documentation"
authors = [{ name = "Qubes OS" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["sphinx (>=8.2.3,<9.0.0)"]

[project.scripts]
qubes-doc-update-icons = "qubes_doc.update_icons:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sphinx>=8.2.3,<9",
    "sphinx-autobuild>=2024.10.3,<2025",
    "sphinx-lint>=1.0.0,<2",
    "sphinx-reredirects>=1.0.0,<2",
    "sphinxext-opengraph==0.12.0",
    "sphinxnotes-any==2.5",
    "sphinxnotes-strike>=1.2.1,<2",
    "sphinx-rtd-theme>=3.0.2,<4",
    "pytest (>=9.0.3,<10.0.0)",
]

[tool.esbonio.sphinx]
pythonCommand = ["${venv:.venv}"]
